tests/typescript/pos/lists/emp-00.ts
/*@ boop :: (list [number]) => {v:boolean | true} */
function boop(xs){
  var zogbert = empty(xs);
  return zogbert;
}
