tests/typescript/neg/objects/emp-00.ts
/*@ boop :: (#list[number]) => {v:boolean | (Prop([v])) } */
function boop(xs){
  var zogbert = emptyPoly(xs);
  return zogbert;
}
